--- a/src/components/Admin/Admin-CSS/AdminDashboard.css
+++ b/src/components/Admin/Admin-CSS/AdminDashboard.css
@@ -4,7 +4,7 @@
   font-size: 32px; 
   font-weight: bold;
   margin-bottom: 20px;
-  color: navy;
+  color: rgba(85,107,247,255);
 }
 
 .filter-container {
