--- a/src/components/Admin/Admin-CSS/AdminHome.css
+++ b/src/components/Admin/Admin-CSS/AdminHome.css
@@ -3,7 +3,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url('./nmims3.jpg');
+  background: url('./cvr.jpg');
   border-radius: 100px;
   background-color: #333;
   display: flex;
