--- a/src/components/Admin/Admin-CSS/AdminNav.css
+++ b/src/components/Admin/Admin-CSS/AdminNav.css
@@ -1,5 +1,5 @@
 .navbar{
-   background-color: navy; 
+   background-color:#556bf7 ; 
     height: 80px;
     margin: 0px;
     
@@ -66,7 +66,7 @@
 }
 }
 .hero-section{
-    background:url("nmims3.jpg"); 
+    background:url("cvr.jpg"); 
     background-size:cover;
     width:100%;
     height: 100vh;
