--- a/src/components/Admin/Admin-CSS/ScheduledInterviewData.css
+++ b/src/components/Admin/Admin-CSS/ScheduledInterviewData.css
@@ -49,7 +49,7 @@ tbody tr.highlighted {
 
 
 tbody tr:hover {
-  background-color: #b3c6e7; /* Light navy blue on hover */
+  background-color: #b3c6e7; /* Light rgba(85,107,247,255) blue on hover */
 }
 
 tbody td:first-child {
